--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "start": "node index.js",
+    "dev": "nodemon index.js",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "server": "nodemon index.js"
+    "server": "nodemon index.js",
+    "dev:ui": "vite"
   },
   "dependencies": {
     "@emotion/react": "^11.11.3",
@@ -17,14 +19,19 @@
     "@mui/material": "^5.15.2",
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "html-to-react": "^1.7.0",
+    "path": "^0.12.7",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.2",
     "react-dom": "^18.2.0",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.21.1",
-    "react-select": "^5.8.0"
+    "react-select": "^5.8.0",
+    "url": "^0.11.3"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.23.7",
